--- a/src/web_static/index.html
+++ b/src/web_static/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="appContainer"></div>
-    <script src="./web_static.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
