--- a/src/react-training/index.html
+++ b/src/react-training/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Field Services</title>
+    <title>React training</title>
   </head>
   <body>
     <div id="appContainer"></div>
